# zlog

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  README.md  configure.ac  do_cmake.sh  index.html  install-deps.sh  make-apk.sh  make-debs.sh  make-dist.sh  make-srpm.sh  objects.inv  run-static-analysis.sh  run.sh  searchindex.js  zlog.spec  zlog.spec.in
alpine/: APKBUILD.in  no-warning-error.patch
api/: index.html
ci/: after_success.sh  before_install.sh  build-pkg.sh  build_deps_image.sh  cli-test.sh  (+6 more)
src/: CMakeLists.txt  Makefile.am  aio.cc  append-check.cc  append.cc  bench.cc  create.cc  internal.hpp  libseqr.cc  libseqr.h  libzlog.cc  libzlog.h  libzlog.hpp  log_mapper.cc  neha_client.cc  neha_client_create.cc  neha_client_destroy.cc  neha_client_test.cc  prime.cc  protobuf_bufferlist_adapter.h  randbytes.h  random_read.cc  seq_read.cc  seqr-server.cc  stream-stress.cc  stream.cc  stripe_history.cc  stripe_history.h  test.cc  test_internal.cc  test_libzlog.cc  test_read.sh  zlog-bench-ng-stats.py  zlog-bench-ng.cc  zlog-change-layout.cc  zlog-seqr-bench.cc  zlog-tool.cc  zlog.cc  zlog.proto  zlog_tool.cc  (+1 more)
src/attic/bench/: bench.cc  bench2.cc  hammer.conf  plot_latency.py  run.sh  soft-reset-ceph.sh
src/attic/bench/cache/: cache_bench.cc  viz.ipynb
src/attic/bench/physical-design/: cls_zlog_bench_client_bug.h
src/attic/bench/rados-append/: CMakeLists.txt
src/bench/: CMakeLists.txt  Dockerfile  Makefile.am  bench.cc  bench2.cc  common.h  entrypoint.sh  op_history.h  payload-append.cc  payload-direct-map.cc  physical-design.cc  physical-design.odp  plot_latency.py  plot_throughput.py  reset-ceph.sh  run-physical-design.sh  run.sh  run_interface_variants.sh  soft-reset-ceph.sh  workload.h  workloads.h
src/bench/cache/: CMakeLists.txt  cache_bench.cc  run.sh
src/bench/physical-design/: common.h  op_history.h  physical-design.cc  workload.h  workloads.h
src/bench/rados-append/: rados-append.cc  viz.ipynb
src/bench/ycsb/: big.conf  run.sh
src/eviction/: arc.cc  lru.cc
src/include/: CMakeLists.txt
src/include/zlog/: backend.h  cache.h  capi.h  ceph_backend.h  db.h  eviction.h  iterator.h  log.h  options.h  ram_backend.h  slice.h  statistics.h  stream.h  transaction.h
src/include/zlog/backend/: ceph.h  fakeseqr.h  lmdb.h  ram.h
src/include/zlog/eviction/: arc.h  lru.h
src/include/zlog/mempool/: mempool.h
src/include/zlog/monitoring/: histogram.h  statistics.h
src/java/: .gitignore  CMakeLists.txt  Makefile.am
src/java/native/: CMakeLists.txt  iterator.cc  portal.h  transaction.cc  zlogjni.cc
src/java/src/main/java/com/cruzdb/: AbstractCruzIterator.java  CruzIterator.java  DB.java  FilledException.java  Log.java  LogException.java  NativeLibraryLoader.java  NotWrittenException.java  ReadOnlyException.java  Transaction.java  ZObject.java
src/java/src/main/java/org/cruzdb/zlog/: FilledException.java  Log.java  LogException.java  NativeLibraryLoader.java  NotWrittenException.java  ReadOnlyException.java  ZObject.java
src/java/src/test/java/com/cruzdb/: AllTests.java  LogTest.java
src/java/src/test/java/org/cruzdb/zlog/: AllTests.java  LogTest.java
src/kvstore/: .gitignore  CMakeLists.txt  Makefile  backend.h  bench.cc  db.cc  db.h  db_impl.cc  db_impl.h  db_test.cc  iterator.cc  iterator.h  iterator_impl.cc  iterator_impl.h  iterator_test.cc  kvstore.proto  node.cc  node.h  node_cache.cc  node_cache.h  persistent-rbtree.cc  ptree.cc  ptree.h  rbt.cc  snapshot.h  test_kvstore.cc  thrash.cc  transaction.cc  transaction.h  transaction_impl.cc  transaction_impl.h
src/libseq/: CMakeLists.txt  Makefile.am  libseqr.cc  libseqr.h
src/libzlog/: CMakeLists.txt  Makefile.am  aio.cc  backend.cc  backend.h  cache.cc  capi.cc  fakeseqr.h  internal.hpp  libzlog.cc  libzlog.hpp  log.cc  log_backend.h  log_backend_test.cc  log_impl.cc  log_impl.h  log_mapper.cc  log_mapper.h  object_map.cc  object_map.h  object_map_test.cc  op.h  sequencer.cc  sequencer.h  sequencer_proposer.cc  sequencer_proposer.h  stream.cc  stripe.cc  stripe.h  stripe_history.cc  stripe_history.h  stripe_test.cc  striper.cc  striper.h  test_libzlog.cc  test_libzlog.h  view.cc  view.h  view_manager.cc  view_manager.h  (+8 more)
src/libzlog/backend/: CMakeLists.txt  ceph.cc  ceph.proto  cls_zlog.cc  cls_zlog_client.cc  cls_zlog_client.h  lmdb.cc  zlog.proto
src/monitoring/: histogram.cc  histogram.h  statistics.cc  statistics.h
src/port/: likely.h  port_posix.cc  port_posix.h  stack_trace.cc
src/proto/: CMakeLists.txt  Makefile.am  adapter_bench.cc  protobuf_bufferlist_adapter.h  zlog.proto
src/seqr/: Makefile.am  libseqr.cc  libseqr.h  server.cc  server.h
src/stats/: histogram.cc  statistics.cc
src/storage/: CMakeLists.txt  README.md  lmdb.cc  test_backend.cc  test_backend.h  test_backend_lmdb.cc  test_lmdb_backend.cc
src/storage/bench/: CMakeLists.txt  backend_bench.cc
src/storage/bench/omap-vs-bytestream/: README.md  hole-punch.diff  results.tar.xz  run.sh  viz.ipynb
src/storage/ceph/: CMakeLists.txt  adapter_bench.cc  adapter_test.proto  ceph.cc  cls_zlog.cc  cls_zlog.fbs  cls_zlog.h  cls_zlog.proto  cls_zlog_client.cc  cls_zlog_client.h  common.h  fbs_helper.h  protobuf_bufferlist_adapter.h  test_backend_ceph.cc  test_ceph_backend.cc  test_cls_zlog.cc
src/storage/lmdb/: CMakeLists.txt  lmdb.cc  test_backend_lmdb.cc
src/storage/ram/: CMakeLists.txt  cruzdb.proto  ram.cc  test_backend_ram.cc
src/test/: CMakeLists.txt  Makefile.am  cache_test.cc  ceph_test_helper.h  create_log_lmdb.cc  db_test.cc  open_log_lmdb.cc  test.cc  test_ceph.cc  test_cls_zlog.cc  test_cls_zlog_v2.cc  test_internal.cc  test_lmdb.cc  test_ram.cc  zstate_test.cc
src/tools/: .gitignore  CMakeLists.txt  README.md  kvs-export.cc  kvs-plot-sim.gp  kvs-sim.py  kvs-viz.py  kvs.py
src/util/: autovector.h  cast_util.h  core_local.h  mempool.cc  mutexlock.h  random.cc  random.h  thread_local.cc  thread_local.h
src/zstate/: CMakeLists.txt  Makefile.am  skytype.cc  skytype.h  test.cc  test_zstate.cc
src/zstate/objects/: register.h
(+100 files in other folders)
