bin_PROGRAMS += payload-direct-map
payload_direct_map_SOURCES = bench/payload-direct-map.cc
payload_direct_map_LDFLAGS = $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
payload_direct_map_LDADD = $(BOOST_PROGRAM_OPTIONS_LIBS)

bin_PROGRAMS += payload-append
payload_append_SOURCES = bench/payload-append.cc
payload_append_LDFLAGS = $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
payload_append_LDADD = $(BOOST_PROGRAM_OPTIONS_LIBS)
